--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,3 @@
-<div class="head-header">
-    <div class="head-text">
-        <h1>COLLEGE OF ENGINEERING AND ARCHITECTURE</h1>
-        <p>ACADEMIC EVALUATION, RECORDS & INFORMATION SYSTEMS</p>
-    </div>
-    <img src="{{ url_for('static', filename='assets/logo.png') }}" alt="CEA Logo" class="head-logo">
-</div>
+<header class="main-header">
+  <!-- Header content is typically defined per-page in the content blocks -->
+</header>
